[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "opencue_rqd"
dynamic = ["version"]
dependencies = [
]

[tool.hatch.version]
path = "src/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.versioningit.write]
file = "src/VERSION"
