[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "opencue_rqd"
dynamic = ["version"]
dependencies = [
]

[tool.hatch.version]
source = "vcs"
#path = "src/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

#[tool.versioningit.write]
#file = "src/VERSION"
